--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,13 +17,24 @@
         <li><%= link_to "Home", root_path %></li>
         <li><%= link_to "About", about_path %></li>
         <li><%= link_to "What's New?", whatsnew_path %></li>
-        <% if user_signed_in? %>
-          <li><%= link_to current_user.full_name, edit_user_registration_path %></li>
-          <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
-        <% else %>
-          <li><%= link_to "Register", new_user_registration_path %></li>
-          <li><%= link_to "Sign in", new_user_session_path %></li>
-        <% end %> 
+
+<% if user_signed_in? %>
+  <li class="dropdown">
+    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+      <%= current_user.full_name %> 
+      <b class="caret"></b>
+    </a>
+    <ul class="dropdown-menu">
+      <li><%= link_to "Edit Profile", edit_user_registration_path %></li>
+      <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
+    </ul>
+  </li>
+<% else %>
+  <li><%= link_to "Register", new_user_registration_path %></li>
+  <li><%= link_to "Sign in", new_user_session_path %></li>
+<% end %>
+
+
     </ul>
   </div><!-- /.navbar-collapse -->
  </div><!-- /.container -->
