--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -12,6 +12,9 @@
   <div><%= f.label :profile_name %><br />
   <%= f.text_field :profile_name%></div>
 
+  <%= f.label :date_of_birth %><br />
+    <%= f.date_select :date_of_birth, :order => [:day, :month, :year], :start_year=>1900 %>
+
   <div><%= f.label :email %><br />
   <%= f.email_field :email, :autofocus => true %></div>
 
