--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -26,6 +26,7 @@
     </a>
     <ul class="dropdown-menu">
       <li><%= link_to "Edit Profile", edit_user_registration_path %></li>
+      <li><%= link_to 'View Profile', profile_path(current_user) %></li>
       <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
     </ul>
   </li>
