--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,4 +1,4 @@
 <div class="page-header">
 	<h1><%= @user.full_name %></h1>
-	<p><%= @user.date_of_birth.strftime("%a %e %B %Y") %></p>
+	<p><strong>Age: </strong><%= @user.age %></p>
 </div>
