--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,4 +1,5 @@
 <div class="page-header">
 	<h1><%= @user.full_name %></h1>
 	<p><strong>Age: </strong><%= @user.age %></p>
+	<p><strong>Gender: </strong><%= @user.gender %></p>
 </div>
