--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -18,6 +18,24 @@
   <div><%= f.label :gender %><br />
   <%= f.select :gender, ['Male', 'Female'] %></div>
 
+  <div><%= f.input :facebook %></div>
+
+  <div><%= f.input :twitter %></div>
+
+  <div><%= f.input :youtube %></div>
+
+  <div><%= f.input :vine %></div>
+
+  <div><%= f.input :instagram %></div>
+
+
+
+            <div class="form-group">
+        <%= f.label :vine %>
+        <%= f.text_field :vine, class: "form-control" %>
+      </div>
+
+
   <div><%= f.label :date_of_birth %><br />
     <%= f.date_select :date_of_birth, :order => [:day, :month, :year], :start_year=>1900 %></div>
 
