--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,12 +1,22 @@
-<div class="jumbotron center">
-	<h1>Welcome theSubsBench.co.uk</h1>
-	<% if user_signed_in? %>
-	    # do something
-	<% else %>
-	 <p>
-	 	<%= image_tag "thesubsbench.png", alt: "the subs bench logo", class: "" %>
-	   <%= link_to "Log in", new_user_session_path, class: "btn btn-default btn-lg" %>
-	   <%= link_to "Sign up", new_user_registration_path, class: "btn btn-primary btn-lg" %>
-	 </p>
-	<% end %>  
-</div>
+<% if user_signed_in? %>
+	<div>
+		<h1>Today's live football</h1>
+	</div>
+<% else %>
+	<div class="jumbotron center">
+		<div class="row">
+			<div class="col-md-12">
+				<h1>Welcome to</h1>
+			</div>
+			<div class="col-md-5">
+				<%= image_tag "thesubsbench.png", alt: "the subs bench logo", class: "" %>
+			</div>
+			<div class="col-md-6">
+				<h3>Don't get left on the sidelines. Join up now!</h3>
+		   <%= link_to "Log in", new_user_session_path, class: "btn btn-default btn-lg" %>
+		   <%= link_to "Sign up", new_user_registration_path, class: "btn btn-primary btn-lg" %>
+			</div>
+		</div>
+	</div>
+<% end %>
+
