--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,7 +1,22 @@
 <div class="page-header">
-	<h1><%= @user.full_name %></h1>
-	<p><strong>Age: </strong><%= @user.age %></p>
-	<p><strong>Gender: </strong><%= @user.gender %></p>
+	
+  <div class="row">
+    <div class="col-md-4">
+    <% if @user.avatar? %>
+      <%= image_tag @user.avatar, :class => "img-rounded" %>
+    <% else %>
+    No avatar
+    <% end %>
+    </div>
+    <div class="col-md-4">
+      <h1><%= @user.full_name %></h1>
+      <p><strong>Profile Name: </strong><%= @user.profile_name %></p>
+      <p><strong>Age: </strong><%= @user.age %></p>
+      <p><strong>Gender: </strong><%= @user.gender %></p>
+    </div>
+  </div>
+
+ 
 
 	<!--Social links -->
 	<% unless @user.youtube.blank? %>
