--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -12,7 +12,9 @@
       <h1><%= @user.full_name %></h1>
       <p><strong>Profile Name: </strong><%= @user.profile_name %></p>
       <p><strong>Age: </strong><%= @user.age %></p>
-      <p><strong>Gender: </strong><%= @user.gender %></p>
+      <% unless @user.gender.blank? %>
+        <p><strong>Gender: </strong><%= @user.gender %></p>
+      <% end %>
     </div>
   </div>
 
