--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -3,7 +3,7 @@
   <div class="row">
     <div class="col-md-4">
     <% if @user.avatar? %>
-      <%= image_tag @user.avatar, :class => "img-rounded" %>
+      <%= image_tag @user.avatar.url(:small), :class => "img-rounded" %>
     <% else %>
     No avatar
     <% end %>
