--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -35,7 +35,7 @@
       <div class="control-group">
         <label class="control-label">Current avatar</label>
         <div class="controls">
-          <%= image_tag f.object.avatar.url %>
+          <%= image_tag f.object.avatar.url(:thumb) %>
         </div>
       </div>
     <% end %>
