--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -18,6 +18,13 @@
         <li><%= link_to "About", about_path %></li>
         <li><%= link_to "What's New?", whatsnew_path %></li>
 
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">UK TV<b class="caret"></b></a>
+          <ul class="dropdown-menu">
+            <li><%= link_to "Channel Numbers", tv_info_path %></li>
+          </ul>
+        </li>
+
 <% if user_signed_in? %>
   <li class="dropdown">
     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
