--- a/app/views/tv_channels/_form.html.erb
+++ b/app/views/tv_channels/_form.html.erb
@@ -4,6 +4,7 @@
   <div class="form-inputs">
     <%= f.input :name %>
     <%= f.input :bt %>
+    <%= f.input :freesat %>
     <%= f.input :freeview %>
     <%= f.input :sky %>
     <%= f.input :virgin %>
