--- a/app/views/tv_channels/index.html.erb
+++ b/app/views/tv_channels/index.html.erb
@@ -1,41 +1,110 @@
-<h1>Listing tv_channels</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Bt</th>
-      <th>Freeview</th>
-      <th>Sky</th>
-      <th>Virgin</th>
-      <th>Youview</th>
-      <th>Rights held</th>
-      <th>Weblink</th>
-      <th>Hd</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @tv_channels.each do |tv_channel| %>
-      <tr>
-        <td><%= tv_channel.name %></td>
+<div class="container">
+  <div class="row">
+    <div class="col-md-6 title-header" >
+      <h1><i class="fa fa-futbol-o"></i> UK TV Channel Numbers</h1>
+    </div>
+    <div class="col-md-2 tv-pills">  
+      <ul class="nav nav-pills nav-justified ">
+        <li class="active"><a href="#SD" data-toggle="tab"><h3>SD</h3></a></li>
+        <li><h3>/</h3></li>
+        <li><a href="#HD" data-toggle="tab"><h3>HD</h3></a></li>
+      </ul>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-12">
+      <br>
+      <p><strong>Please Note:</strong> Whist we try to keep channel numbers accurate, they may be changed by the television providers without prior notice. Please notify us imediately if you spot any errors.</p>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-12">
+      <div class="tab-content">
+        <div class="tab-pane fade in active" id="SD">
+          <div class="tv-table">
+            <table class="table table-striped">
+              
+              <thead> 
+              <% @sd_channels.each do |tv_channel| %> 
+                <tr>
+                  <th>Channel Name</th>
+                  <th>BT</th>
+                  <th>Freesat</th>
+                  <th>Freeview</th>
+                  <th>Sky</th>
+                  <th>Virgin</th>
+                  <th>YouView</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td><%= tv_channel.name %></td>
         <td><%= tv_channel.bt %></td>
+        <td><%= tv_channel.freesat %></td>
         <td><%= tv_channel.freeview %></td>
         <td><%= tv_channel.sky %></td>
         <td><%= tv_channel.virgin %></td>
         <td><%= tv_channel.youview %></td>
-        <td><%= tv_channel.rights_held %></td>
-        <td><%= tv_channel.weblink %></td>
-        <td><%= tv_channel.hd %></td>
-        <td><%= link_to 'Show', tv_channel %></td>
-        <td><%= link_to 'Edit', edit_tv_channel_path(tv_channel) %></td>
-        <td><%= link_to 'Destroy', tv_channel, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+        <% if signed_in? %>
+          <td><%= link_to 'Show', tv_channel %></td>
+          <td><%= link_to 'Edit', edit_tv_channel_path(tv_channel) %></td>
+          <td><%= link_to 'Destroy', tv_channel, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% end %>
+                </tr>
+              </tbody>
+              <% end %>
+            </table>
 
-<br>
+          </div>
+        </div>
+        <div class="tab-pane fade" id="HD">
+          TEST2
+          <div class="tv-table">
+            
+            <table class="table table-striped">
+              
+              <thead> 
+              <% @hd_channels.each do |tv_channel| %> 
+                <tr>
+                  <th>Channel Name</th>
+                  <th>BT</th>
+                  <th>Freesat</th>
+                  <th>Freeview</th>
+                  <th>Sky</th>
+                  <th>Virgin</th>
+                  <th>YouView</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td><%= tv_channel.name %></td>
+        <td><%= tv_channel.bt %></td>
+        <td><%= tv_channel.freesat %></td>
+        <td><%= tv_channel.freeview %></td>
+        <td><%= tv_channel.sky %></td>
+        <td><%= tv_channel.virgin %></td>
+        <td><%= tv_channel.youview %></td>
+        <% if signed_in? %>
+          <td><%= link_to 'Show', tv_channel %></td>
+          <td><%= link_to 'Edit', edit_tv_channel_path(tv_channel) %></td>
+          <td><%= link_to 'Destroy', tv_channel, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% end %>
+                </tr>
+              </tbody>
+              <% end %>
+            </table>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
 
 <%= link_to 'New Tv channel', new_tv_channel_path %>
+
+
+
+
